syntax="proto2";

package org.dst.common.protobuf;

import "common_pb.proto";

option java_package="org.dst.common.protobuf.generated";
option java_outer_classname="DictProtocol";
option cc_generic_services = true;

message DstDict {
    repeated string keys = 1;
    repeated string values = 2;
}

message PutRequest {
    required string key = 1;
    required DstDict dict = 2;
}

message PutResponse {
    required Status status = 1;
}

message GetRequest {
    required string key = 1;
}

message GetResponse {
    required Status status = 1;
    optional DstDict dict = 2;
}

message GetItemValueRequest {
    required string key = 1;
    required string itemKey = 2;
}

message GetItemValueResponse {
    optional string itemValue = 1;
    required Status status = 2;
}

message PopItemRequest {
    required string key = 1;
    required string itemKey = 2;
}

message PopItemResponse {
    optional string itemValue = 1;
    required Status status = 2;
}

message PutItemRequest {
    required string key = 1;
    required string itemKey = 2;
    required string itemValue = 3;
}

message PutItemResponse {
    required Status status = 1;
}

message DelRequest {
    required string key = 1;
}

message DelResponse {
    required Status status = 1;
}

message DelItemRequest {
    required string key = 1;
    required string itemKey = 2;
}

message DelItemResponse {
    required Status status = 1;
}

service DstDictService {
    rpc put(PutRequest) returns (PutResponse);
    rpc get(GetRequest) returns (GetResponse);
    rpc getItemValue(GetItemValueRequest) returns (GetItemValueResponse);
    rpc popItem(PopItemRequest) returns (PopItemResponse);
    rpc putItem(PutItemRequest) returns (PutItemResponse);
    rpc del(DelRequest) returns (DelResponse);
    rpc delItem(DelItemRequest) returns (DelItemResponse);
}
